Fixed a few typos.  Why do I always notice these immediately *after* committing?
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14267 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/README.html
+++ b/juggler/vc7/README.html
@@ -53,7 +53,7 @@ The required environment variables are as follows:
   <dd>
     The version of Boost against which the Juggler code will be compiled.
     However, this string must use underscores (<tt>_</tt>) instead of
-    periods (<tt>.</tt>), and it should only reference the majro and
+    periods (<tt>.</tt>), and it should only reference the major and
     minor version number.  For example, if you are compiling against Boost
     1.31.2, this environment variable would be set to <tt>1_31</tt>.
   </dd>
@@ -95,7 +95,7 @@ The optional environment variables are as follows:
   </dd>
   <dt><tt>VRPN_ROOT</tt></dt>
   <dd>
-    The root directory of an
+    The root directory of a
     <a href="http://www.cs.unc.edu/Research/vrpn/">VRPN</a> 6.04 or newer
     tree.  This directory must contain the sub-directories <tt>quat</tt>
     and <tt>vrpn</tt>.  In each of those, there must be a sub-directory
