--- a/juggler/vc7/README.html
+++ b/juggler/vc7/README.html
@@ -83,13 +83,14 @@ The optional environment variables are as follows:
 </p>
 
 <dl>
-  <dt><tt>PF_ROOT</tt></dt>
+  <dt><tt>PFROOT</tt></dt>
   <dd>
     The root directory of an
     <a href="http://www.sgi.com/software/performer/">OpenGL Performer</a> 3.x
     installation.  This directory must contain the sub-directories
     <tt>Include</tt> and <tt>Lib</tt>.  This is the normal structure for a
-    standard OpenGL Performer installation.
+    standard OpenGL Performer installation.  This variable is normally set
+    automatically by the OpenGL Performer installation wizard.
   </dd>
   <dt><tt>OMNIORB_ROOT</tt></dt>
   <dd>
