--- a/juggler/vc7/README.html
+++ b/juggler/vc7/README.html
@@ -3,17 +3,102 @@
 </head>
 
 <body>
-<h1>Set Environment Variables</h1>
+
+<h1>Table of Contents</h1>
+
+<ul>
+  <li><a href="#intro">Introduction</a></li>
+  <li><a href="#install_python">Install Python</a></li>
+  <li><a href="#run_buildwin32_py">Run <tt>buildwin32.py</tt></a></li>
+  <li><a href="#choose_configuration">Choose a Configuration to Build</a></li>
+  <li><a href="#install_vrj">Install VR Juggler</a></li>
+  <li><a href="#install_deps">Install VR Juggler Dependencies</a></li>
+</ul>
+
+<a name="intro"><h1>1. Introduction to Compiling and Installing VR
+Juggler</h1></a>
+
+<p>
+Building VR Juggler (both the C++ and the Java code) on Windows is
+straightforward.  A Visual Studio solution has been created that collects
+each of the redistributable entities into Visual C++ projects.  An overview
+of the steps for building and installing VR Juggler on Windows follow:
+</p>
+
+<ol>
+  <li>
+    Install <a href="http://www.python.org/">Python</a> 2.2 or newer.
+  </li>
+  <li>
+    Run <tt>buildwin32.py</tt> and fill in at least the paths to the
+    required dependencies.
+  </li>
+  <li>
+    In Visual Studio, choose the configuration(s) to build.
+  </li>
+  <li>
+    Install the compiled libraries, tools, and (optionally) dependencies.
+  </li>
+</ol>
+
+<p>
+Each of the above steps is described in more detail below.
+</p>
+
+<a name="install_python"><h1>2. Install Python</h1></a>
+
+<p>
+In order to <a href="#run_buildwin32_py">run the helper script
+<tt>buildwin32.py</tt></a>, you must have
+<a href="http://www.python.org/">Python</a> 2.2 or newer installed on your
+system.  Visit the Python website for
+<a href="http://www.python.org/download/">download and install
+instructions</a>.
+</p>
+
+<a name="run_buildwin32_py"><h1>3. Run <tt>buildwin32.py</tt></h1></a>
+
+<p>
+Once you have Python installed, you can open the folder containing the
+Juggler Project source in Windows Explorer and double-click on the
+icon for the script <tt>buildwin32.py</tt>.  This script simplifies the
+process of building VR Juggler on Windows by setting up paths and
+environment variables based on input that you provide.  It then starts
+Visual Studio for you, and when the build is complete, it will perform
+all the necessary installation steps&mdash;including installation of
+VR Juggler's C++ dependencies into a convenient, centralized location.
+</p>
+
+<blockquote>
+<b>NOTE:</b> For the build to work correctly, you must use the
+<tt>buildwin32.py</tt> script.  It does more than just set environment
+variables.
+</blockquote>
+
+<p>
+Regarding the environment variables, the remainder of this
+section describes each of the required and optional environment variables
+used by the Visual Studio build.  You can read through them to get a
+better understanding of what <tt>buildwin32.py</tt> expects from your
+answers to its questions, or you can
+<a href="#choose_configuration">skip to the next section</a>.
+</p>
+
+<h2>3.1. Set Environment Variables</h2>
 
 <p>
 Prior to starting the Visual Studio GUI, several environment variables
-must be set.  These variables provide paths to external dependencies of
-the Juggler source code.  There are some environment variables that are
-required for successful compilation of the Juggler source, and there are
-some that are optional for getting additional code to compile.
+must be set.  If you run the Python script <tt>buildwin32.py</tt>, all of
+the necessary environment variables will be set (and cached) based on
+responses you provide to several questions.
+
+These variables provide paths to external dependencies of the Juggler
+source code.  There are some environment variables that are required for
+successful compilation of the Juggler source, and there are some that are
+optional for getting additional code to compile.
 </p>
 
-<h2>Required Environment Variables</h2>
+<h3>3.1.1. Required Environment Variables</h3>
 
 <p>
 The required environment variables are as follows:
@@ -68,21 +153,39 @@ The required environment variables are as follows:
   <dd>
     The root directory of an installed copy of
     <a href="http://www.sourceforge.net/projects/xml-cppdom/">CppDOM</a>
-    0.3.1 or newer.  This must contain a directory named <tt>lib</tt> and a
-    directory named <tt>include</tt>.  Within <tt>lib</tt>, there must be
-    directories named <tt>Debug</tt>, <tt>DebugDLL</tt>, <tt>Release</tt>,
-    and <tt>ReleaseDLL</tt>.  Each of these contains one build of the CppDOM
-    library that reflects the name of the containing directory.
+    0.3.2 or newer.  This must contain a directory named <tt>lib</tt> and a
+    directory named <tt>include</tt>.  Within <tt>lib</tt>, there must exist
+    the different builds of CppDOM: release DLL (<tt>cppdom.lib</tt> and
+    <tt>cppdom.dll</tt>), debug DLL (<tt>cppddom_d.lib</tt> and
+    <tt>cppdom_d.dll</tt>), static release (<tt>cppdom_s.lib</tt>), and
+    static debug (<tt>cppdom_s_d.lib</tt>).
+  </dd>
+  <dt><tt>GMTL_ROOT</tt></dt>
+  <dd>
+    The root directory of an installed copy of
+    <a href="http://www.sourceforge.net/projects/ggt/">GMTL</a>
+    0.3.2 or newer.  This must contain a directory named <tt>include</tt>
+    which in turn has a subdirectory named <tt>gmtl</tt> containing the
+    GMTL header files.
   </dd>
 </dl>
 
-<h2>Optional Environment Variables</h2>
+<h3>3.1.2. Optional Environment Variables</h3>
 
 <p>
 The optional environment variables are as follows:
 </p>
 
 <dl>
+  <dt><tt>JAVA_HOME</tt></dt>
+  <dd>
+    The root directory of a <a href="http://java.sun.com/j2se/">Java 2 SDK</a>
+    installation.  It is highly recommended that version 1.4.2 or newer be
+    installed.  Version 1.3.1 is the minimum required version.
+  </dd>
+  <dd><tt>JAVA3D_HOME</tt></dt>
+  <dd>
+  </dd>
   <dt><tt>PFROOT</tt></dt>
   <dd>
     The root directory of an
@@ -113,17 +216,65 @@ The optional environment variables are as follows:
     version of the appropriate library.  This is the normal directory
     structure seen after VRPN is compiled successfully.
   </dd>
+  <dt><tt>AUDIERE_ROOT</tt></dt>
+  <dd>
+    The root directory of an
+    <a href="http://audiere.sourceforge.net/">Audiere</a> 1.9.3 or newer
+    installation.
+  </dd>
+  <dt><tt>TRACKD_API_ROOT</tt></dt>
+  <dd>
+    The root directory of a Trackd API installation.
+  </dd>
 </dl>
 
-<h1>Running Visual Studio</h1>
+<a name="choose_configuration"><h1>4. Choose a Configuration to Build</h1></a>
 
 <p>
-Once the environment variables are set, double-click on <tt>Juggler.sln</tt>
-or load that file into the Visual Studio GUI.  The chosen target should
-be either "Debug DLL" or "Release DLL".  Otherwise, select "Batch Build"
-and compile everything selected.  Compiling the static versions of the
-various libraries is not necessary.
+After you answer the questions asked by <tt>buildwin32.py</tt>, the script
+will start up the version of Visual Studio that you have in your path (or
+that it detected on your system if your environment does not have the
+<tt>devenv.exe</tt> command in your path).  Inside the Visual Studio GUI,
+you must choose the configuration that you want to build.
 </p>
+
+<p>
+The chosen target should be either "Debug DLL" or "Release DLL".  Otherwise,
+select "Batch Build" and compile everything.  Compiling the static versions
+of the various libraries (the "Release" and "Debug" targets) is not
+necessary.
+</p>
+
+<a name="install_vrj"><h1>5. Install VR Juggler</h1></a>
+
+<p>
+After successfully compiling VR Juggler, <tt>buildwin32.py</tt> will ask
+if you want to install VR Juggler.  On Windows, you must install VR Juggler
+to be able to build and run applications.  Working out of the development
+tree is not possible the way it is on other platforms.  If you answer
+"yes" to the question of installing VR Juggler, <tt>buildwin32.py</tt> will
+go through the full process of installing everything that was compiled.
+</p>
+
+<a name="install_deps"><h1>6. Install VR Juggler Dependencies</h1></a>
+
+<p>
+After VR Juggler is installed, you will be given the option to install
+VR Juggler's C++ dependencies.  This includes NSPR, CppDOM, Boost, GMTL,
+and any optional packages that were available for compiling additional
+features.  If you answer "yes" to this question, the dependencies will
+be installed to a location of your choice (which can be the same as the
+VR Juggler installation directory).  This gives you a convenient,
+single location for referencing all dependencies from application project
+files.
+</p>
+
+<blockquote>
+<b>NOTE:</b> The sample and test applications reference the environment
+variable <tt>%VJ_DEPS_DIR%</tt>, so it is highly recommended that you
+install the dependencies to a single location unless you have already done
+so.
+</blockquote>
 
 <p>
 <font size="-1"><i>$Id$</i></font>
