Take some initial steps to improve the detection and setup process for omniORB installations.  My goal here is to allow a version of omniORB installed with the buildwin32.py script to be used to recompile VR Juggler from source.  Prior to this change, that was not possible.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14950 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/README.html
+++ b/juggler/vc7/README.html
@@ -205,10 +205,7 @@ The optional environment variables are as follows:
     The root directory of an
     <a href="http://omniorb.sourceforge.net/">omniORB</a> 4.0.x installation.
     This directory must contain the sub-directories <tt>bin</tt>,
-    <tt>include</tt>, and <tt>lib</tt>.  In <tt>bin</tt> and <tt>lib</tt>,
-    there must be sub-directories named <tt>x86_win32</tt> that contain the
-    actual compiled binaries.  This is the normal directory structure seen
-    after omniORB is compiled successfully.
+    <tt>include</tt>, and <tt>lib</tt>.
   </dd>
   <dt><tt>VRPN_ROOT</tt></dt>
   <dd>
