--- a/vc7/README.html
+++ b/vc7/README.html
@@ -205,10 +205,7 @@ The optional environment variables are as follows:
     The root directory of an
     <a href="http://omniorb.sourceforge.net/">omniORB</a> 4.0.x installation.
     This directory must contain the sub-directories <tt>bin</tt>,
-    <tt>include</tt>, and <tt>lib</tt>.  In <tt>bin</tt> and <tt>lib</tt>,
-    there must be sub-directories named <tt>x86_win32</tt> that contain the
-    actual compiled binaries.  This is the normal directory structure seen
-    after omniORB is compiled successfully.
+    <tt>include</tt>, and <tt>lib</tt>.
   </dd>
   <dt><tt>VRPN_ROOT</tt></dt>
   <dd>
