--- a/vc7/README.html
+++ b/vc7/README.html
@@ -241,9 +241,9 @@ you must choose the configuration that you want to build.
 </p>
 
 <p>
-The chosen target should be either "Debug DLL" or "Release DLL".  Otherwise,
-select "Batch Build" under the "Build" menu and compile everything all at
-once.  If you choose to build everything but do not have all the
+The chosen target should be either "Debug" or "Release".  Otherwise, select
+"Batch Build" under the "Build" menu and compile everything all at once.  If
+you choose to build everything but do not have all the
 <a href="#opt_env_vars">optional dependencies</a>, some optional targets
 such as device drivers or Java features may fail to build.  If this is not
 acceptable, you must <a href="#run_buildwin32_py">go back to Step 3</a>
