Supporting both static and dynamic libraries on Windows is rather tricky. The ways I have seen it done require that user build processes require passing an extra /D option to Visual C++ that identifies that DLL linking or static linking will be used.  This seems very error prone to me.
Since we do not currently have the infrastructure to support that anyway,
it seems to me that we won't be supporting static libraries on Windows any
time soon.  As such, I have renamed all the configurations to remove the
DLL distinction.  Now, everything is either "Debug" or "Release."  Besides
all of the above, this change simplifies the use of the Visual Studio
solution on the user end.


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14954 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/README.html
+++ b/juggler/vc7/README.html
@@ -241,9 +241,9 @@ you must choose the configuration that you want to build.
 </p>
 
 <p>
-The chosen target should be either "Debug DLL" or "Release DLL".  Otherwise,
-select "Batch Build" under the "Build" menu and compile everything all at
-once.  If you choose to build everything but do not have all the
+The chosen target should be either "Debug" or "Release".  Otherwise, select
+"Batch Build" under the "Build" menu and compile everything all at once.  If
+you choose to build everything but do not have all the
 <a href="#opt_env_vars">optional dependencies</a>, some optional targets
 such as device drivers or Java features may fail to build.  If this is not
 acceptable, you must <a href="#run_buildwin32_py">go back to Step 3</a>
