The Sonix OpenAL plug-in now compiles and loads on Windows.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14975 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/README.html
+++ b/juggler/vc7/README.html
@@ -224,6 +224,14 @@ The optional environment variables are as follows:
     <a href="http://audiere.sourceforge.net/">Audiere</a> 1.9.3 or newer
     installation.
   </dd>
+  <dt><tt>OPENAL_ROOT</tt></dt>
+  <dd>
+    The root directory of an
+    <a href="http://www.openal.org/downloads.html">OpenAL SDK</a> 1.0 or newer
+    installation.  The SDK can be
+    <a href="http://developer.creative.com/landing.asp?cat=1&sbcat=31&top=38">downloaded
+    from Creative Labs</a>.
+  </dd>
   <dt><tt>TRACKD_API_ROOT</tt></dt>
   <dd>
     The root directory of a Trackd API installation.
